MDLの導入。設定保持の実装。読み上げ項目の選択の実装。

--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/material.min.css" rel="stylesheet" type="text/css">
+    <script src="js/material.min.js" type="text/javascript"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/common.css" rel="stylesheet" type="text/css">
     <script src="js/bundle.js" type="text/javascript"></script>
-    <title>SavannaTalk 20160404</title>
+    <title>SavannaTalk 20160405</title>
 </head>
 <body id="content">
     <router-view></router-view>
